chore: rename templates folder

--- a/templates/deployments/docker-compose.yaml
+++ b/templates/deployments/docker-compose.yaml
@@ -5,6 +5,6 @@ services:
     restart: always
     build:
       context: ..
-      dockerfile: ./build/Dockerfile
+      dockerfile: ../../templates/build/Dockerfile
     ports:
       - "3000:3000"
